--- a/hornchess.cabal
+++ b/hornchess.cabal
@@ -32,6 +32,8 @@ library
       src
   build-depends:
       base >=4.7 && <5
+    , brick
+    , vty
   default-language: Haskell2010
 
 executable hornchess-exe
@@ -43,7 +45,9 @@ executable hornchess-exe
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , brick
     , hornchess
+    , vty
   default-language: Haskell2010
 
 test-suite hornchess-test
@@ -56,5 +60,7 @@ test-suite hornchess-test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , brick
     , hornchess
+    , vty
   default-language: Haskell2010
